# simplex_grid

./: LICENSE  README.md  example.py  pyproject.toml  requirements-dev.txt
simplex_grid/: __init__.py  core.py
tests/: __init__.py  test_core.py
